--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:github": "NODE_ENV=production next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
